--- a/index.html
+++ b/index.html
@@ -4,64 +4,151 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Transformative Education Center</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; line-height: 1.6; background: #f9f9f9; color: #333; }
-    header { background: #555; color: #fff; padding: 1em 2em; text-align: center; }
-    nav { background: #e0e0e0; padding: 0.5em 2em; display: flex; gap: 1em; justify-content: center; }
-    nav a { text-decoration: none; color: #333; font-weight: bold; }
-    nav a:hover { color: #555; }
-    section { padding: 2em; max-width: 800px; margin: auto; }
-    footer { background: #333; color: #fff; text-align: center; padding: 1em; margin-top: 2em; }
-    h2 { color: #555; }
+    body {
+      background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    .navbar {
+      background-color: #004080;
+    }
+    .navbar-brand, .nav-link, .navbar-nav .nav-link.active {
+      color: #fff !important;
+      font-weight: 600;
+      letter-spacing: 1px;
+    }
+    .nav-link:hover {
+      color: #ffd700 !important;
+    }
+    .hero {
+      background: #004080;
+      color: #fff;
+      padding: 3rem 1rem;
+      text-align: center;
+      border-radius: 0 0 40px 40px;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.08);
+      margin-bottom: 2rem;
+    }
+    .section-card {
+      background: #fff;
+      border-radius: 18px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.06);
+      padding: 2rem;
+      margin-bottom: 2rem;
+    }
+    h2 {
+      color: #004080;
+      margin-bottom: 1rem;
+    }
+    .fa-ul {
+      margin-left: 2em;
+    }
+    footer {
+      background: #004080;
+      color: #fff;
+      text-align: center;
+      padding: 1.2rem 0;
+      margin-top: 2rem;
+      border-radius: 40px 40px 0 0;
+      letter-spacing: 1px;
+    }
+    @media (max-width: 576px) {
+      .hero {
+        border-radius: 0 0 20px 20px;
+        padding: 2rem 0.5rem;
+      }
+      .section-card {
+        padding: 1rem;
+      }
+    }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Transformative Education Center</h1>
-    <p>Inspiring learners to become agents of change</p>
-  </header>
-  <nav>
-    <a href="#bio">About</a>
-    <a href="#education">Education</a>
-    <a href="#teaching">Teaching Philosophy</a>
-    <a href="#research">Research</a>
-    <a href="#contact">Contact</a>
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg">
+    <div class="container">
+      <a class="navbar-brand" href="#"><i class="fa-solid fa-graduation-cap"></i> Transformative Ed Center</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link active" href="#bio">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
+          <li class="nav-item"><a class="nav-link" href="#teaching">Teaching</a></li>
+          <li class="nav-item"><a class="nav-link" href="#research">Research</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </div>
   </nav>
-  <section id="bio">
-    <h2>About</h2>
-    <p>Gopal Krishnamurthy is an educator, researcher, and lifelong learner dedicated to transforming the educational experience. With over 30 years in the field, he brings a unique blend of academic expertise and heartfelt commitment to student growth.</p>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <h1 class="display-5 fw-bold mb-2"><i class="fa-solid fa-lightbulb"></i> Transformative Education Center</h1>
+    <p class="lead mb-0">Inspiring learners to become agents of change</p>
   </section>
-  <section id="education">
-    <h2>Education</h2>
-    <ul>
-      <li>2012: PhD in Education. Gevirtz Graduate School of Education, University of California, Santa Barbara, USA.</li>
-      <li>2010: MA in Education, Gevirtz Graduate School of Education, University of California, Santa Barbara (UCSB), USA.</li>
-      <li>2005–2006: PhD student, Dept. of Philosophy, the University of Hawai’i at Manoa, USA. Comparative (East-West) Philosophy and Philosophy for Children (P4C).</li>
-      <li>1998: MA in Philosophy, Colorado State University, USA. Studies in Symbolic Logic and Applied Ethics.</li>
-      <li>1992: BA (Honors), Major in Physics, The Open University, UK.</li>
-    </ul>
-  </section>
-  <section id="teaching">
-    <h2>Teaching Philosophy</h2>
-    <p>My teaching is guided by principles that emphasize deep attention, questioning assumptions, and challenging false binaries in education. I strive to create spaces where teaching is not about reinforcing known truths but about exposing foundational beliefs to inquiry and transformation. Teaching safely protects the status quo; teaching with risk invites uncertainty, wonder, and the reframing of problems. I aim to uncover rather than cover curriculum, cultivating a sense of curiosity and disruption. My classes foster vibrant learning ecologies through dialogue, integration of knowledge, and shared exploration. I often lead students into “not knowing,” prompting creativity and experimentation. Recognized for my teaching with award nominations and inclusion in discussions of liberationist education, I continue to explore what that looks like in everyday teaching moments. I embrace theater and improvisation to challenge traditional classroom dynamics. Ultimately, my approach blends preparation with responsiveness, inviting joy, challenge, and transformative engagement in learning.</p>
-  </section>
-  <section id="research">
-    <h2>Research &amp; Publications</h2>
-    <p><strong>Research Interests:</strong> Transformative learning, inclusive pedagogy, education policy</p>
-    <ul>
-      <li><em>Forthcoming:</em> Book version of Ph.D. dissertation “Gesturing Towards Teaching: A Teacher’s Narrative.”</li>
-      <li>Krishnamurthy, G. (2019). "Taking Mistakes: A Mathematical Tragicomedy," <em>The New Educator</em>, Routledge.</li>
-      <li>Boxley, S., Krishnamurthy, G. &amp; Ridgway, M. (2016). "Learning Care for the Earth with Krishnamurti" in <em>Environmental Education in Times of Crisis</em>, Routledge.</li>
-      <li>Krishnamurthy, G. (2013). "The Global Scope of a Local Response: School-in-a-box and the RIVER methodology," <em>Knowledge Cultures</em>, Addleton Academic Publishers.</li>
-    </ul>
-  </section>
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Have questions or want to collaborate? Reach out-We’d love to connect.</p>
-    <p>Email: <a href="mailto:gopal.learning@gmail.com">gopal.learning@gmail.com</a></p>
-  </section>
+
+  <main class="container">
+
+    <!-- About Section -->
+    <section id="bio" class="section-card">
+      <h2><i class="fa-solid fa-user"></i> About</h2>
+      <p>Gopal Krishnamurthy is an educator, researcher, and lifelong learner dedicated to transforming the educational experience. With over 30 years in the field, he brings a unique blend of academic expertise and heartfelt commitment to student growth.</p>
+    </section>
+
+    <!-- Education Section -->
+    <section id="education" class="section-card">
+      <h2><i class="fa-solid fa-graduation-cap"></i> Education</h2>
+      <ul class="fa-ul">
+        <li><span class="fa-li"><i class="fa-solid fa-certificate text-primary"></i></span>2012: PhD in Education, Gevirtz Graduate School of Education, University of California, Santa Barbara, USA.</li>
+        <li><span class="fa-li"><i class="fa-solid fa-certificate text-primary"></i></span>2010: MA in Education, Gevirtz Graduate School of Education, University of California, Santa Barbara, USA.</li>
+        <li><span class="fa-li"><i class="fa-solid fa-certificate text-primary"></i></span>2005–2006: PhD student, Dept. of Philosophy, University of Hawai’i at Manoa, USA. Comparative (East-West) Philosophy and Philosophy for Children (P4C).</li>
+        <li><span class="fa-li"><i class="fa-solid fa-certificate text-primary"></i></span>1998: MA in Philosophy, Colorado State University, USA. Studies in Symbolic Logic and Applied Ethics.</li>
+        <li><span class="fa-li"><i class="fa-solid fa-certificate text-primary"></i></span>1992: BA (Honors), Major in Physics, The Open University, UK.</li>
+      </ul>
+    </section>
+
+    <!-- Teaching Philosophy Section -->
+    <section id="teaching" class="section-card">
+      <h2><i class="fa-solid fa-chalkboard-user"></i> Teaching Philosophy</h2>
+      <p>My teaching is guided by principles that emphasize deep attention, questioning assumptions, and challenging false binaries in education. I strive to create spaces where teaching is not about reinforcing known truths but about exposing foundational beliefs to inquiry and transformation. Teaching safely protects the status quo; teaching with risk invites uncertainty, wonder, and the reframing of problems. I aim to uncover rather than cover curriculum, cultivating a sense of curiosity and disruption. My classes foster vibrant learning ecologies through dialogue, integration of knowledge, and shared exploration. I often lead students into “not knowing,” prompting creativity and experimentation. Recognized for my teaching with award nominations and inclusion in discussions of liberationist education, I continue to explore what that looks like in everyday teaching moments. I embrace theater and improvisation to challenge traditional classroom dynamics. Ultimately, my approach blends preparation with responsiveness, inviting joy, challenge, and transformative engagement in learning.</p>
+    </section>
+
+    <!-- Research Section -->
+    <section id="research" class="section-card">
+      <h2><i class="fa-solid fa-book-open"></i> Research &amp; Publications</h2>
+      <p><strong>Research Interests:</strong> Transformative learning, inclusive pedagogy, education policy</p>
+      <ul>
+        <li><em>Forthcoming:</em> Book version of Ph.D. dissertation “Gesturing Towards Teaching: A Teacher’s Narrative.”</li>
+        <li>Krishnamurthy, G. (2019). "Taking Mistakes: A Mathematical Tragicomedy," <em>The New Educator</em>, Routledge.</li>
+        <li>Boxley, S., Krishnamurthy, G. &amp; Ridgway, M. (2016). "Learning Care for the Earth with Krishnamurti" in <em>Environmental Education in Times of Crisis</em>, Routledge.</li>
+        <li>Krishnamurthy, G. (2013). "The Global Scope of a Local Response: School-in-a-box and the RIVER methodology," <em>Knowledge Cultures</em>, Addleton Academic Publishers.</li>
+      </ul>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="section-card">
+      <h2><i class="fa-solid fa-envelope"></i> Contact</h2>
+      <p>Have questions or want to collaborate? Reach out-We’d love to connect.</p>
+      <p>
+        <a href="mailto:gopal.learning@gmail.com" class="btn btn-primary">
+          <i class="fa-solid fa-envelope"></i> Email Gopal
+        </a>
+      </p>
+    </section>
+
+  </main>
+
   <footer>
-    <p>&copy; 2025 Transformative Education Center</p>
+    <p>&copy; 2025 Transformative Education Center &middot; Designed with <i class="fa-solid fa-heart text-danger"></i></p>
   </footer>
+
+  <!-- Bootstrap JS (for navbar toggling on mobile) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
