--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Transformative Education Center &middot; Designed with <i class="fa-solid fa-heart text-danger"></i></p>
+    <p>&copy; 2025 Transformative Education Center</p>
   </footer>
 
   <!-- Bootstrap JS (for navbar toggling on mobile) -->
