--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <p>Have questions or want to collaborate? Reach out-We’d love to connect.</p>
       <p>
         <a href="mailto:gopal.learning@gmail.com" class="btn btn-primary">
-          <i class="fa-solid fa-envelope"></i> Email Gopal
+          <i class="fa-solid fa-envelope"></i> Email Us
         </a>
       </p>
     </section>
