--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     section {
       margin-bottom: 2.5rem;
     }
-    h1, h2, h3 {
+    main h1, main h2, main h3,
+    section h1, section h2, section h3 {
       color: #263c5a;
-      margin-top: 0;
     }
     blockquote {
       margin: 1.5em 0;
@@ -79,7 +79,7 @@
 </head>
 <body>
   <header>
-    <h1>Transformative Education Centre (TEC)</h1>
+    <h1>Transformative Education Centre</h1>
     <p>Learning, Inquiry, and Change for All</p>
   </header>
   <nav>
@@ -91,7 +91,7 @@
   </nav>
   <main>
     <section id="intentions">
-      <h2>Intentions of the Transformative Education Centre (TEC)</h2>
+      <h2>Intentions of the Transformative Education Centre</h2>
       <ul>
         <li>Providing a learning space for people from all walks of life.</li>
         <li>Addressing the ‘root’ (in this sense radical) of questions and challenges.</li>
