--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
     <a href="#intentions">Intentions</a>
     <a href="#problems">Problems in Education</a>
     <a href="#forums">Forums & Activities</a>
-    <a href="#contribute">Contribute</a>
-    <a href="#contacts">Contacts & Related</a>
+    <a href="#related">Related Centres & Institutes</a>
+    <a href="#contact">Contact</a>
   </nav>
   <main>
     <section id="intentions">
@@ -178,15 +178,9 @@
       </p>
     </section>
 
-    <section id="contribute">
-      <h2>Contribute</h2>
-      <p>
-        If you are interested in contributing (volunteering for specific projects or making financial contributions), please contact us below.
-      </p>
-    </section>
 
-    <section id="contacts">
-      <h2>Contacts &amp; Related Centres</h2>
+    <section id="related">
+      <h2>Related Centres &amp; Institutes</h2>
       <ul>
         <li><a href="https://www.antioch.edu/academics/education/med-exed/med-for-experienced-educators-transformative-education/" target="_blank" rel="noopener">Antioch University – Transformative Education</a></li>
         <li><a href="https://krishnamurtistudies.org/" target="_blank" rel="noopener">Krishnamurti Studies</a></li>
@@ -195,6 +189,13 @@
         <li><a href="https://cepress.org/" target="_blank" rel="noopener">Contemporary Education Press</a></li>
       </ul>
     </section>
+
+    <section id="contribute">
+      <h2>Contact</h2>
+     <p>Have questions or want to collaborate? Reach out—We’d love to connect.</p>
+     <p>Email: <a href="mailto:gopal.learning@gmail.com">gopal.learning@gmail.com</a></p>
+    </section>
+    
   </main>
   <footer>
     &copy; 2025 Transformative Education Centre &mdash; All rights reserved.
